uodate reports logic